# gst-omx-nvidia

./: configure.ac  gstomx_config.c
omx/: Makefile.am  gstnvhdmioverlaysink.c  gstnvhdmioverlaysink.h  gstnvoverlaysink.c  gstnvoverlaysink.h  gstomx.c  gstomx.h  gstomxaacdec.c  gstomxaacdec.h  gstomxaacenc.c  gstomxaacenc.h  gstomxamrnbdec.c  gstomxamrnbdec.h  gstomxamrwbdec.c  gstomxamrwbdec.h  gstomxaudiodec.c  gstomxaudiodec.h  gstomxaudioenc.c  gstomxaudioenc.h  gstomxh263dec.c  gstomxh263dec.h  gstomxh263enc.h  gstomxh264dec.c  gstomxh264dec.h  gstomxh264enc.c  gstomxh264enc.h  gstomxh265dec.c  gstomxh265dec.h  gstomxh265enc.c  gstomxh265enc.h  gstomxmjpegdec.h  gstomxmpeg2videodec.h  gstomxmpeg4videodec.c  gstomxmpeg4videodec.h  gstomxmpeg4videoenc.h  gstomxmpegaudiodec.c  gstomxmpegaudiodec.h  gstomxtheoradec.h  gstomxtrace.c  gstomxtrace.h  (+16 more)
omx/openmax/: NVOMX_CameraExtensions.h  NVOMX_DecoderExtensions.h  NVOMX_EncoderExtensions.h  NVOMX_IndexExtensions.h  NVOMX_RendererExtensions.h  NVOMX_TNR.h  OMX_Core.h  OMX_IVCommon.h  OMX_Index.h  OMX_IndexExt.h  OMX_Types.h  OMX_Video.h  OMX_VideoExt.h
